--- a/RestAppUdemy/RestAppUdemy/appsettings.json
+++ b/RestAppUdemy/RestAppUdemy/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySqlConnection": {
+    "MySqlConnectionString":  "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=a1b2c3"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
