--- a/RestAppUdemy/RestAppUdemy/appsettings.json
+++ b/RestAppUdemy/RestAppUdemy/appsettings.json
@@ -1,6 +1,11 @@
 {
   "MySqlConnection": {
-    "MySqlConnectionString":  "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=a1b2c3"
+    "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=a1b2c3"
+  },
+  "TokenConfigurations": {
+    "Audience": "ExempleAudience",
+    "Issuer": "ExempleIssuer",
+    "Seconds": 1200
   },
   "Logging": {
     "LogLevel": {
