Criado endpoint para enviar arquivo

--- a/RestAppUdemy/RestAppUdemy/RestAppUdemy.csproj
+++ b/RestAppUdemy/RestAppUdemy/RestAppUdemy.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Tapioca.HATEOAS" Version="1.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Other\" />
+  </ItemGroup>
+
   <Target Name="ChangeAliasesOfStrongNameAssemblies" BeforeTargets="FindReferenceAssembliesForReferences;ResolveReferences">
     <ItemGroup>
       <ReferencePath Condition="'%(FileName)' == 'MySqlConnector'">
