--- a/RestAppUdemy/RestAppUdemy/appsettings.json
+++ b/RestAppUdemy/RestAppUdemy/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySqlConnection": {
-    "MySqlConnectionString": "Server=localhost;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=a1b2c3"
+    "MySqlConnectionString": "Server=db;Port=3306;DataBase=rest_with_asp_net_udemy;Uid=root;Pwd=docker;SslMode=none;"
   },
   "TokenConfigurations": {
     "Audience": "ExempleAudience",
